Adding meat to presentation

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -1,21 +1,27 @@
-= DevOps 9000: Быстро, гибко, безопасно
-Marat Radchenko <https://github.com/slonopotamus[@slonopotamus]>
-:date: 2020-02-26
+= DevOps меня полностью
+Марат Радченко <https://github.com/slonopotamus[@slonopotamus]>
 :source-highlighter: highlightjs
 :revealjs_controls: false
 :revealjs_hash: true
+:revealjs_theme: league
 :icons: font
 :highlightjs-languages: groovy
+
+Ломаем билды быстро, гибко и безопасно
+
+**2020-02-26**
 
 == Предыстория
 
 A1, S1, T1, D1 - тысячи их
 
-* Программисты :wall: от билд-менеджеров
+* Программисты отдельно от билд-менеджеров
 * Билд-скрипты внутри Jenkins, нет доступа
 * Тяжеловесные процессы изменений
-* Мутная граница pipeline <> build.bat
+* "Забор" между pipeline и build.bat
 * Влияние веток друг на друга
+
+== Open source
 
 == Цели
 
@@ -36,14 +42,20 @@ pipeline
 }
 --
 
-== Планы
+== Проблемы Jenkins
+
+* Нет локальной проверки
+* Весь функционал в плагинах, которые system-wide
+* Нужны админские права даже чтобы создать джоб
+* Чудовищный UI/UX
+
+== Планы & мечты
 
 * Изоляция от окружения на билд-агенте
-* Билд за час
-
-== Мечты
-
-* Другой CI
+* Билд менее чем за час
+* Создание тест-стендов одной кнопкой
+* Автоматический деплой билда на клиенты
+* Более другой CI-сервис
 * Динамический пул агентов
 
 == Q&A
