add some automation show-off

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -2,7 +2,6 @@
 Марат Радченко <https://github.com/slonopotamus[@slonopotamus]>
 v1.0, 2020-02-26
 :source-highlighter: highlightjs
-:revealjs_controls: false
 :revealjs_hash: true
 :revealjs_theme: league
 :revealjsdir: https://cdn.jsdelivr.net/npm/reveal.js@3.9.2
@@ -13,7 +12,48 @@ v1.0, 2020-02-26
 
 **{revdate}**
 
-== Предыстория
+== !
+
+Эта презентация автоматически компилируется из текстового файла и деплоится в эти ваши интернеты когда я делаю `git push`
+
+=== !
+
+У неё нет билд-менеджера, нет билд-агентов, нет десятков вики-страниц с инструкцией по установке
+
+=== !
+
+Есть условный `build.bat`
+
+[source,ruby]
+----
+include::Rakefile[]
+----
+
+Это _весь_ файл
+
+=== !
+
+И условный `Jenkinsfile`
+
+[source,yaml]
+----
+include::.github/workflows/ci.yml[]
+----
+
+И это тоже _весь_ файл
+
+=== !
+
+Оба файла находятся в репозитории с исходниками
+
+=== Игрушечный пример!
+
+[.step]
+* Окей, это всего-лишь презентация
+* Игры немного сложнее
+* Да, немного
+
+== Предыстория: внутри Allods Team
 
 A1, S1, T1, D1 - тысячи их
 
@@ -23,7 +63,26 @@ A1, S1, T1, D1 - тысячи их
 * "Забор" между pipeline и build.bat
 * Влияние веток друг на друга
 
-== Open source
+[.columns]
+== Предыстория: внешний мир (open source)
+
+[.column]
+--
+У проекта есть
+
+* Git-репозиторий
+* Issue-tracker
+--
+
+[.column]
+--
+Сторонние сервисы
+
+* Сервис CI
+* Сервис для деплоя
+* Хранилище релизов
+* Вебсайт
+--
 
 == Цели
 
@@ -33,7 +92,7 @@ A1, S1, T1, D1 - тысячи их
 * Быстрое внесение изменений в билд-процессы
 * Сборка релиза за полчаса
 
-== Пайплайны внутри репозитория игры
+== Пайплайны - это просто
 
 .Разве что-то может пойти не так?
 [source,groovy]
