add build instructions to readme

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,17 @@
 = DevOps меня полностью
 
-Sources for tech talk @ Mail.Ru on DevOps, Jenkins and better development approaches.
+Sources for tech talk @ Mail.Ru on DevOps, Jenkins and better development practices.
 
 * link:https://slonopotamus.github.io/devops-9000/presentation.html[Interactive HTML]
 
 * link:https://slonopotamus.github.io/devops-9000/presentation.html?print-pdf[Printable]
+
+== Building
+
+[source,bash]
+----
+bundle install
+bundle exec rake
+----
+
+And then, open `build/presentation.html`
