fix typo: WGFO -> WFGO

--- a/presentation.adoc
+++ b/presentation.adoc
@@ -202,7 +202,7 @@ image::slack-notifications.png[]
 
 == Как билдить быстро?
 
-WGFO собирает комплект бинов/пэкеджей на 5 платформ за 1ч 15мин
+WFGO собирает комплект бинов/пэкеджей на 5 платформ за 1ч 15мин
 
 * Не делать лишнего
 * Выполнять в параллель независимые задачи
